--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -16,6 +16,7 @@
   margin: 12%;
   width: 100%;
   height: 100%;
+  animation: fadeIn ease 3s;
 }
 
 .wrapper a {
@@ -43,4 +44,15 @@
 .wrapper a:hover:after {
   transform: scaleX(1.5);
   transform-origin: bottom left;
+}
+
+// --------Animations---------
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
