--- a/src/components/UI/Main/Main.module.scss
+++ b/src/components/UI/Main/Main.module.scss
@@ -1,7 +1,5 @@
 .main {
   position: relative;
   height: 100vh;
-  width: 100%;
-  background-color: blue;
-  border: 2px solid black;
+  width: auto;
 }
