Update portfolio, add sass

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -5,7 +5,38 @@
   height: 100vh;
   background-color: $mainColor;
   position: fixed;
+  right: -300px;
   top: 0;
-  right: 0;
   z-index: 2;
+  transition: all 0.5s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &.active {
+    right: 0;
+  }
+
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    font-size: 30px;
+    font-weight: 300;
+    color: white;
+    width: 60%;
+    li {
+      margin-bottom: 25px;
+
+      a {
+        font-size: inherit;
+        color: inherit;
+        text-decoration: none;
+      }
+
+      &:hover {
+        font-weight: 500;
+      }
+    }
+  }
 }
