--- a/src/components/Topbar/Topbar.module.scss
+++ b/src/components/Topbar/Topbar.module.scss
@@ -7,8 +7,12 @@
   color: $mainColor;
   position: fixed;
   top: 0;
-  z-index: 2;
+  z-index: 3;
   transition: all 1s ease;
+
+  a {
+    color: $mainColor;
+  }
 
   .wrapper {
     padding: 10px 30px;
@@ -19,6 +23,7 @@
     .left {
       display: flex;
       align-items: center;
+
       .logo {
         font-size: 40px;
         font-weight: 700;
@@ -66,6 +71,10 @@
   &.active {
     background-color: $mainColor;
     color: white;
+
+    .logo {
+      color: white;
+    }
 
     .hamburger {
       span {
